--- a/src/app/pages/credentials/credentials.component.scss
+++ b/src/app/pages/credentials/credentials.component.scss
@@ -56,3 +56,14 @@ h1 {
   margin-bottom: 24px;
   color: var(--mat-card-title-text-color);
 }
+
+.large-icon {
+  font-size: 48px;
+}
+
+.empty-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem;
+}
