--- a/src/app/pages/credentials/credentials.component.html
+++ b/src/app/pages/credentials/credentials.component.html
@@ -235,6 +235,11 @@
                 }
               </mat-card-actions>
             </mat-card>
+
+            <p>
+              <button mat-flat-button (click)="donate(wallet[1])">Donate ($0.1) to Nostria</button>
+            </p>
+
           }
         } @else {
           <div class="empty-list">
