feat: Update navigation to link to calendar component

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -164,7 +164,7 @@
         <span>Media Player</span>
       </button>
       <mat-divider></mat-divider>
-      <button mat-menu-item (click)="toggleMediaPlayer();">
+      <button mat-menu-item  routerLink="/calendar">
         <mat-icon>calendar_month</mat-icon>
         <span>Calendar</span>
       </button>
